[package]
name = "svgmacro"
version = "0.1.2"
authors = ["rasviitanen <rasviitanen@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Writing SVG from Rust using a simple svg! macro."
repository = "https://github.com/rasviitanen/svgmacro"

[dependencies]

[lib]
name = "svgmacro"
plugin = true

