[package]
name = "svgmacro"
version = "0.2.1"
authors = ["rasviitanen <rasviitanen@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Write any SVG easily from Rust!"
repository = "https://github.com/rasviitanen/svgmacro"

[dependencies]

[lib]
name = "svgmacro"
plugin = true

